--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,55 +6,53 @@
     tools:context="com.andlab.tugasandroid.LoginActivity"
     >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:padding="16dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textSize="24sp"
-            android:textColor="#000"
-            android:fontFamily="sans-serif"
-            android:text="LOGIN"/>
-
-        <EditText
-            android:id="@+id/etEmail"
-            android:layout_marginTop="8dp"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="username"
-            android:textColorHint="#80000000"
-            android:padding="8dp"
-            android:inputType="textEmailAddress"
-            android:background="#ffffff"
-            android:textColor="#80000000"/>
+            android:layout_centerInParent="true"
+            android:padding="16dp"
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/etPassword"
-            android:layout_marginTop="8dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Password"
-            android:textColorHint="#80000000"
-            android:inputType="textPassword"
-            android:padding="8dp"
-            android:background="#ffffff"
-            android:textColor="#80000000"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textSize="24sp"
+                android:textColor="#000"
+                android:fontFamily="sans-serif"
+                android:text="LOGIN"/>
 
-        <Button
-            android:id="@+id/btnLogin"
-            android:layout_marginTop="16dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#000"
-            android:text="LOG IN"
-            android:background="#ff5555"/>
+            <EditText
+                android:id="@+id/etEmail"
+                android:layout_marginTop="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Email"
+                android:textColorHint="#80000000"
+                android:padding="8dp"
+                android:inputType="textEmailAddress"
+                android:background="#ffffff"
+                android:textColor="#80000000"/>
 
-    </LinearLayout>
+            <EditText
+                android:id="@+id/etPassword"
+                android:layout_marginTop="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Password"
+                android:textColorHint="#80000000"
+                android:inputType="textPassword"
+                android:padding="8dp"
+                android:background="#ffffff"
+                android:textColor="#80000000"/>
 
-</RelativeLayout>
+            <Button
+                android:id="@+id/btnLogin"
+                android:layout_marginTop="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#000"
+                android:text="LOG IN"
+                android:background="#ff5555"/>
+        </LinearLayout>
+    </RelativeLayout>
